# finaco

./: CMakeLists.txt  README.md  build-osx.sh
src/: dicommover.cpp  dicommover.h  dicomquery.cpp  dicomquery.h  engine.cpp  engine.h  finaco_about.cpp  finaco_about.h  finaco_destination.cpp  finaco_destination.h  finaco_mainFrame.cpp  finaco_mainFrame.h  finaco_moveStatus.cpp  finaco_moveStatus.h  finaco_searchStatus.cpp  finaco_searchStatus.h  finaco_updateCheck.cpp  finaco_updateCheck.h  gui.cpp  gui.h  main.cpp  patientdata.cpp  patientdata.h  update.cpp
src/gui/: gui.fbp
src/win/: version.rc
